--- a/index.html
+++ b/index.html
@@ -87,6 +87,28 @@
 			</div>
 	</div>
 
+	<div class="section" id="section5">
+			<div class="fp-bg"></div>
+			<h2 style="top: 20%">
+				<span>What </span> 
+				<span style="color:#8A786F">new way </span>
+				<span>of living</span>
+				<span></br>do you want?</span> 
+			</h2>
+			<div><img src="./img/natural.jpg" class="natural">
+				<div class="natural"><h5>Natural and renewable Materials</h5></div>
+				<div class="natural"><h6><a href="#">learn more></a></h6></div>
+			</div>
+			<div><img src="./img/easy.jpg" class="easy">
+				<div class="easy"><h5>Easy and intuitive assembly</h5></div>
+				<div class="easy"><h6><a href="#">learn more></a></h6></div>
+			</div>
+			<div><img src="./img/cloud.jpg" class="cloud">
+				<div class="cloud"><h5>Cloud production and manufacture</h5></div>
+				<div class="cloud"><h6><a href="#">learn more></a></h6></div>
+			</div>		
+	</div>
+
 <!-- 	
 	<div class="section" id="section5">
 		<div class="fp-bg"></div>
@@ -144,7 +166,7 @@
 
 <script type="text/javascript">
 	var myFullpage = new fullpage('#fullpage', {
-		anchors: ['home', 'me_do', 'you_do', 'you_design', 'you_get'],
+		anchors: ['home', 'me_do', 'you_do', 'you_design', 'you_get', 'new_way'],
 		licenseKey: '5C38BC7D-960744E4-95CC12D2-0B887589',
         verticalCentered: false,
 		navigation:true,
@@ -168,7 +190,7 @@
 			if(destination.index == 0 || destination.index == 1 ){
 				$('.menu-medo').css('display','none');
 			}
-			if(destination.index == 2 || destination.index == 3 || destination.index == 4){
+			if(destination.index == 2 || destination.index == 3 || destination.index == 4 || destination.index == 5){
 				$('.menu-medo').show(2000);
 			}
 			if(origin.index == 3){
