update a modelo Tavolo Shapediver

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 			<div class="fp-bg"></div>
 			<h2 style="top: 15%">
 				<span>What </span> 
-				<span style="color:#8A786F">new way </span>
+				<span style="color:#8EE4C6">new way </span>
 				<span>of living</span>
 				<span></br>do you want?</span> 
 			</h2>
@@ -110,7 +110,7 @@
 	</div>
 	<div class="section" id="section6">
 			<div class="fp-bg"></div>
-			<iframe id="sdv-iframe" width="100%" height="100%" src="https://viewer.shapediver.com/v2/2.14.0/iframe/remote.html?modelViewUrl=eu-central-1&ticket=cc22cffcf0c96cab52a8249cd70898a16728d3fadcd25c1abbcba9b068683bde24f8037c01f19c593af2c2d9c2d3f4c8c1a89ffc801e1ac27f9f26a1e1555283e3015dee82e57a26fdf439e2fb7a17dfa6a4eeb85868d0084f65bda9d97a9de7959b574ed0e87cbb920ca015ccd6c38155ad2f67cc2d-221403384cd0843ab8ec5a7e4a248bf5" referrerpolicy="origin" allowfullscreen scrolling="no" style="overflow-x: hidden; overflow-y: hidden; border-width: 0; z-index: 1;">
+			<iframe id="sdv-iframe" width="100%" height="100%" src="https://viewer.shapediver.com/v2/2.14.0/iframe/remote.html?modelViewUrl=eu-central-1&ticket=255ee29d279bc12bea94e38fe82ea4c9c1abd887be538619f42de7db00b437eb72cf723120d315981dbf3e0528094bd7e4a094300d1617d59aba55e367ea277ddf78d92e24a7fdb8e4d1eab188a003fc0a3583fb00fbe6d641f09a938b5c4b02f155e927f17dee3f7bc92aaeaf59b1ea8917c6a50e1e-1ab77fe5550604e2778b6a158fba5add" referrerpolicy="origin" allowfullscreen scrolling="no" style="overflow-x: hidden; overflow-y: hidden; border-width: 0; z-index: 1;">
 			<p>Your browser does not support iframes.</p>
 			</iframe>
 	</div>
