--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 
 <body>
 
+		
+
 <div class="menu-medo">
 		<img src="./img/menu.svg" class="menu">
 		<a href="#home"><img src="./img/medo_gris.svg" class="logo-medo-gris"></a>		
@@ -46,48 +48,49 @@
 
 	<div class="section" id="section0">
 		<div class="fp-bg"></div>
-		<h1>what you want</h1>
-		<a href="#medo"><img src="./img/medo_white.svg" class="logo-medo" ></a>
-        <img src="./img/linea_divisora.svg" class="linea-divisora" >	
-	</div>
-
-	<div class="section" id="section1">
-		<div class="fp-bg"></div>
-		<h1>what you want</h1>
-		<a href="#home"><img src="./img/medo_white.svg" class="logo-medo" ></a>
-        <img src="./img/linea_divisora.svg" class="linea-divisora" >	
+		<div class="logo-medo-whatyouwant">
+			<h1>
+				<span><a href="#medo"><img src="./img/medo_white.svg" class="logo-medo" ></a></span>
+				<span><img src="./img/linea_divisora.svg" class="linea-divisora" ></span>
+				<span>what you want</span>
+			</h1>
+		</div>		
+		<div class="app">
+			<span><a href="https://www.apple.com/cl/ios/app-store/" target="_blank"><img src="./img/app-store-badge.png" class="app-badge" ></a></span>
+			<span><a href="https://play.google.com/store?hl=es_419" target="_blank"><img src="./img/play-store-badge.png" class="app-badge" ></a></span>			
+		</div>
+			
 	</div>
 	
-	<div class="section" id="section2">
+	<div class="section" id="section1">
 		<div class="fp-bg"></div>
 		<h2 style="color:#8EE4C6">You Do</h2>
 		<h2></br>what you want</h2>
     </div>
 	
-	<div class="section" id="section3">
+	<div class="section" id="section2">
 			<div class="fp-bg"></div>
 			<h2 style="color:#8EE4C6">You Design</h2>
 			<h2></br>what you want</h2>
 			<img src="./img/mesinha.gif" class="gif-mesinha">			
 	</div>
 	
-	<div class="section" id="section4">
+	<div class="section" id="section3">
 			<div class="fp-bg"></div>
 			<h2 style="color:#8EE4C6">You Get</h2>
 			<h2></br>what you want</h2>
 			<div class="youGet">
-				<div><img src="./img/hibrido.png" class="youGet-images"></div>
-				<div><img src="./img/Mesinha.png" class="youGet-images"></div>
-				<div><img src="./img/sgabello.png" class="youGet-images"></div>
-				<div><img src="./img/rainbow.png" class="youGet-images"></div>
-				<div><img src="./img/wall-system.png" class="youGet-images"></div>
-				<div><img src="./img/chinois.png" class="youGet-images"></div>
-				<div><img src="./img/tavolo-ulian.png" class="youGet-images"></div>
-				<div><img src="./img/suspension.png" class="youGet-images"></div>
+				<div><img src="./img/slide_modelos/mesinha.png" class="youGet-images"></div>
+				<div><img src="./img/slide_modelos/tavolo.png" class="youGet-images"></div>
+				<div><img src="./img/slide_modelos/hibrido.png" class="youGet-images"></div>
+				<div><img src="./img/slide_modelos/sgabello.png" class="youGet-images"></div>
+				<div><img src="./img/slide_modelos/rainbow.png" class="youGet-images"></div>
+				<div><img src="./img/slide_modelos/chinois.png" class="youGet-images"></div>
+				<div><img src="./img/slide_modelos/wall-system.png" class="youGet-images"></div>
 			</div>
 	</div>
 
-	<div class="section" id="section5">
+	<div class="section" id="section4">
 			<div class="fp-bg"></div>
 			<h2 style="top: 15%">
 				<span>What </span> 
@@ -95,45 +98,56 @@
 				<span>of living</span>
 				<span></br>do you want?</span> 
 			</h2>
-			<div><img src="./img/natural.jpg" class="natural">
+			<div><a href="#new_way"><img src="./img/natural.jpg" class="natural"></a>
 				<div class="natural"><h5>Natural and renewable Materials</h5></div>
-				<div class="natural"><h6><a href="#">learn more></a></h6></div>
 			</div>
-			<div><img src="./img/easy.jpg" class="easy">
+			<div><a href="#new_way"><img src="./img/easy.jpg" class="easy"></a>
 				<div class="easy"><h5>Easy and intuitive assembly</h5></div>
-				<div class="easy"><h6><a href="#">learn more></a></h6></div>
 			</div>
-			<div><img src="./img/cloud.jpg" class="cloud">
+			<div><a href="#new_way"><img src="./img/cloud.jpg" class="cloud"></a>
 				<div class="cloud"><h5>Cloud production and manufacture</h5></div>
-				<div class="cloud"><h6><a href="#">learn more></a></h6></div>
 			</div>		
 	</div>
-	<div class="section" id="section6">
+	<div class="section" id="section5">
 			<div class="fp-bg"></div>
-			<iframe id="sdv-iframe" width="100%" height="100%" src="https://viewer.shapediver.com/v2/2.14.0/iframe/remote.html?modelViewUrl=eu-central-1&ticket=255ee29d279bc12bea94e38fe82ea4c9c1abd887be538619f42de7db00b437eb72cf723120d315981dbf3e0528094bd7e4a094300d1617d59aba55e367ea277ddf78d92e24a7fdb8e4d1eab188a003fc0a3583fb00fbe6d641f09a938b5c4b02f155e927f17dee3f7bc92aaeaf59b1ea8917c6a50e1e-1ab77fe5550604e2778b6a158fba5add" referrerpolicy="origin" allowfullscreen scrolling="no" style="overflow-x: hidden; overflow-y: hidden; border-width: 0; z-index: 1;">
-			<p>Your browser does not support iframes.</p>
+			
+			<a href="#new_way"><img src="./img/arrow_up.svg" class="arrow-up"></a>	
+
+			<a href="#home"><img src="./img/arrow_down.svg" class="arrow-down"></a>
+			
+			<div class='container'>
+				<ul>
+				  <li>
+					<a class='animated-arrow' href='https://me-do.cl/en/2/collections2'>
+					<span class='the-arrow -left'><span class='shaft'></span></span>
+					<span class='main'><span class='text'>Start Customizing</span>
+					<span class='the-arrow -right'><span class='shaft'></span></span></span>
+					</a>
+				  </li>
+				</ul>
+			</div>
+			<iframe id="sdv-iframe" width="100%" height="120%" src="https://viewer.shapediver.com/v2/2.14.0/iframe/remote.html?modelViewUrl=eu-central-1&ticket=f3c14121d4ff085872e507d7ffdad3fcc8de298b91f72c2568cc0c14b217b825ea304ca8fa9bfa3b70d0fe588a015a2eedc33b0eaf02e0d262c0fd2f3e10a7a11c73348cae4718b01cee41dafb5d2aeb19b5ace065279b9fed842b2f970cf060fe9a2d306e40bdc72a44cc385d71b55993dc9b67f09f-5d99503e5e0e3e5c8d824d4c181e0760" referrerpolicy="origin" allowfullscreen scrolling="no" style="overflow-x: hidden; overflow-y: hidden; border-width: 0; z-index: 1; position: absolute; left: 0%; top: -10%;">
 			</iframe>
 	</div>
 	
 
 
 <script type="text/javascript" src="./js/fullpage.js"></script>
-<script type="text/javascript" src="./js/examples.js"></script>
 <script type="text/javascript" src="./js/fullpage.parallax.min.js"></script>
 <script type="text/javascript" src="./js/fullpage.extensions.min.js"></script>
 <script type="text/javascript" src="./js/jquery.min.js"></script>
 <script type="text/javascript" src="./js/slick.min.js"></script>
-<script type="text/javascript" src="./js/	imagesloaded.pkgd.min.js"></script>
+<script type="text/javascript" src="./js/imagesloaded.pkgd.min.js"></script>
 
 <script type="text/javascript">
 	var myFullpage = new fullpage('#fullpage', {
-		anchors: ['home', 'me_do', 'you_do', 'you_design', 'you_get', 'new_way','configurator'],
+		anchors: ['home', 'you_do', 'you_design', 'you_get', 'new_way','configurator'],
 		licenseKey: '5C38BC7D-960744E4-95CC12D2-0B887589',
         verticalCentered: false,
 		navigation:true,
         showActiveTooltip: true,
 		parallax: true,
-		parallaxKey: 'C86F8C66-837548EC-AEF8CBCE-2AC78C30',
+		parallaxKey: 'bWUtZG8uY2xfQXB2Y0dGeVlXeHNZWGc9SWhZ',
 		parallaxOptions: {
 			type: 'reveal',
 			percentage: 85
@@ -143,18 +157,24 @@
 		fitToSection:false,
 		v2compatible: false,
 		afterLoad: function(origin, destination, direction){
-			if(destination.index == 3){
+			if(destination.index == 2){
 				$('.gif-mesinha').css('display','block');
 			}
 		},
 		onLeave: function(origin, destination, direction){
-			if(destination.index == 0 || destination.index == 1 ){
+			if(destination.index == 0 ){
 				$('.menu-medo').css('display','none');
 			}
-			if(destination.index == 2 || destination.index == 3 || destination.index == 4 || destination.index == 5 || destination.index == 6){
+			if(destination.index == 1 || destination.index == 2 || destination.index == 3 || destination.index == 4 || destination.index == 5){
 				$('.menu-medo').show(2000);
 			}
-			if(origin.index == 3){
+			if(destination.index == 0 || destination.index == 1 || destination.index == 2 || destination.index == 3){
+				$('#fp-nav ul li a span, .fp-slidesNav ul li a span').css('background','#333')
+			}
+			if(destination.index == 4 || destination.index == 5){
+				$('#fp-nav ul li a span, .fp-slidesNav ul li a span').css('background','#bbb')
+			}
+			if(origin.index == 2){
 				$('.gif-mesinha').css('display','none');
 			}
 		},		
